# languagechange

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: run-examples.yml  run-tests.yml
docs/: conf.py  index.rst  languagechange.models.rst  modules.rst  requirements.txt
docs/source/api/: languagechange.models.change.rst  languagechange.models.meaning.rst  languagechange.models.representation.rst  languagechange.models.rst  languagechange.models.type.rst  languagechange.rst  modules.rst
docs/source/tutorials/: isle.rst  kvinna.rst
examples/compare-representations/: README.md  requirements.txt  run_compare_representations.py  run_compare_words_in_benchmark.py
examples/lsc/: isle.ipynb  lsc-text-variation-comparison.ipynb
examples/parquet-corpora/: README.md  parquet_corpora.ipynb
examples/visualizations/: Hands_on_Language_Change.ipynb  run_visualizations.py
languagechange/: __init__.py  benchmark.py  cache.py  config.py  corpora.py  pipeline.py  resource_manager.py  search.py  usages.py  utils.py  visualization.py
languagechange/locales/: ca.json  en.json  es.json  fi.json  fr.json  it.json  ku.json  mg.json  nl.json  pt.json  spacy_package_names.json  tr.json
languagechange/locales/definition_templates/: da.json  de.json  el.json  id.json  ja.json  la.json  lt.json  no.json  pl.json  ru.json  sv.json  zh.json
languagechange/models/change/: metrics.py  timeseries.py  widid.py
languagechange/models/meaning/: clustering.py  meaning.py
languagechange/models/representation/: contextualized.py  definition.py  prompting.py  static.py
tests/: test_line_search.py  test_parquet_corpus.py  test_search_term.py
