[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchange"
version = "0.1.0"
description = "Python Library for Language Change"
authors = [
    { name = "Change is Key!" }
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "dload>=0.6.0",
    "LSCDetection-LanguageChange==0.0.1",
    "datasets>=4.0",
    "filelock",
    "gensim>=4.4",
    "huggingface-hub>=0.24",
    "jsonlines",
    "langchain>=0.3",
    "lxml",
    "numpy>=1.26",
    "pandas>=2.2",
    "peft>=0.17",
    "pydantic>=2.11",
    "scikit-learn>=1.7",
    "scipy>=1.14.1",
    "sentence-transformers>=3.1",
    "sortedcontainers",
    "torch>=2.0",
    "transformers>=4.47",
    "tqdm",
    "platformdirs",
    "mlrose_hiive>=2.2.4",
    "six>=1.16",
    "matplotlib",
    "joblib<1.3",
    "jsonschema",
    "networkx>=3",
    "ipython",
    "spacy>=3",
    "click",
]

[project.urls]
Homepage = "https://github.com/pierluigic/languagechange"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["languagechange*"]
exclude = ["build*", "dist*", "examples*"]

[tool.setuptools.package-data]
languagechange = ["locales/**/*"]

[project.optional-dependencies]
providers = [
    "langchain-openai==0.3.28",
    "langchain-ibm",
    "databricks-langchain",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:.*SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:.*Swigvarlink has no __module__ attribute:DeprecationWarning",
]